deployments/kubernetes/pymiser-service-deployment.yaml
# deployments/kubernetes/pymiser-service-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pymiser-service
  labels:
    app: pymiser-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pymiser-service
  template:
    metadata:
      labels:
        app: pymiser-service
    spec:
      containers:
      - name: pymiser-container
        image: your-dockerhub-username/auth-service:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
