deployments/kubernetes/ingress.yaml
# deployments/kubernetes/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pymiser-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/
        pathType: Prefix
        backend:
          service:
            name: pymiser-service
            port:
              number: 80
